Flare-On post updates
* Each post now links back to the intro post
* Intro post now links to all other posts
* Moved about me page to it's own page
* Converted all files to unix format (no return carriage)

--- a/_config.yml
+++ b/_config.yml
@@ -213,7 +213,7 @@ sass:
 
 # Outputting
 permalink: /:categories/:title/
-paginate: 5 # amount of posts to show
+paginate: 10 # amount of posts to show
 paginate_path: /page:num/
 timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
@@ -285,4 +285,12 @@ defaults:
       comments: # true
       share: true
       related: true
+      classes: wide
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
       classes: wide
