--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ minimal_mistakes_skin    : "dark"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Computers are hard; Titles are harder"
+title                    : "Pom's Ponderings"
 title_separator          : "-"
-subtitle                 : "A hands-on approach to learning through doing"
+subtitle                 : "Computers are hard; titles are harder"
 name                     : "Tom Daniels"
 description              : "An amazing website."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
@@ -110,7 +110,7 @@ author:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       url: #"mailto:trd6577@g.rit.edu"
-    - label: "Website"
+    - label: "Website (📍 You are here 📍)"
       icon: "fas fa-fw fa-link"
       url: "https://trdan6577.github.io"
     - label: "Twitter"
