--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,9 @@
 # main links
 main:
     - title: "# whoami"
-      url: https://trdan6577.github.io/about/
+      url: /about/
+    - title: "Tags"
+      url: /tags/
   # - title: "Quick-Start Guide"
   #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   # - title: "About"
