Access tokens blog post
* Updated gems
* Updated mmistakes version
* Updated bio
* Added "show_date" tag to all blog posts
* Updated CSS to show expand sections at 18px

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@
 # https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 
 # theme                  : "minimal-mistakes-jekyll"
-remote_theme             : "mmistakes/minimal-mistakes@4.24.0"
+remote_theme             : "mmistakes/minimal-mistakes@4.26.1"
 minimal_mistakes_skin    : "dark"
 
 # Site Settings
@@ -103,7 +103,7 @@ analytics:
 author:
   name             : "Tom Daniels"
   avatar           : "/assets/images/bio-photo.jpg"
-  bio              : "Computer nerd, avid learner, power nap enthusiast"
+  bio              : "Power nap enthusiast"
   location         : "Philadelphia, probably climbing"
   email            : "trd6577@g.rit.edu"
   links:
